refactor: add validation for when files files doesn't exist